lib/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Integer -> L_integ                                 (1)
	LIdent -> L_LIdent                                 (2)
	UIdent -> L_UIdent                                 (3)
	Program -> ListTopDef                              (4)
	ListTopDef -> TopDef ';;'                          (5)
	ListTopDef -> TopDef ';;' ListTopDef               (6)
	TopDef -> 'type' UIdent '(' ListLIdent ')' '=' ListConstructor   (7)
	TopDef -> 'type' UIdent '=' ListConstructor        (8)
	TopDef -> LIdent '::' Type '=' Expr                (9)
	TopDef -> LIdent '=' Expr                          (10)
	ListConstructor -> Constructor                     (11)
	ListConstructor -> Constructor '|' ListConstructor   (12)
	ListLIdent -> LIdent                               (13)
	ListLIdent -> LIdent ',' ListLIdent                (14)
	Type -> LIdent                                     (15)
	Type -> UIdent '(' ListType ')'                    (16)
	Type -> UIdent                                     (17)
	Type -> '(' ListLIdent ')' '=>' Type               (18)
	ListType -> Type                                   (19)
	ListType -> Type ',' ListType                      (20)
	Constructor -> UIdent '(' ListType ')'             (21)
	Constructor -> UIdent                              (22)
	Arg -> LIdent Type                                 (23)
	Expr -> 'let' Expr '::' Type '=' Expr 'in' Expr    (24)
	Expr -> 'let' Expr '=' Expr 'in' Expr              (25)
	Expr -> 'match' Expr 'with' '(' ListMatchBranch ')'   (26)
	Expr -> 'if' Expr 'then' Expr 'else' Expr          (27)
	Expr -> 'fun' '(' ListArg ')' '->' Expr            (28)
	Expr -> '[' ListExpr ']'                           (29)
	Expr -> Expr1 '||' Expr                            (30)
	Expr -> Expr1                                      (31)
	Expr6 -> LIdent                                    (32)
	Expr6 -> UIdent                                    (33)
	Expr6 -> '_'                                       (34)
	Expr6 -> Expr6 '(' ListExpr ')'                    (35)
	Expr6 -> Literal                                   (36)
	Expr6 -> '(' Expr ')'                              (37)
	Expr5 -> '-' Expr6                                 (38)
	Expr5 -> '!' Expr6                                 (39)
	Expr5 -> Expr6                                     (40)
	Expr4 -> Expr4 MulOp Expr5                         (41)
	Expr4 -> Expr5                                     (42)
	Expr3 -> Expr3 AddOp Expr4                         (43)
	Expr3 -> Expr4                                     (44)
	Expr2 -> Expr2 RelOp Expr3                         (45)
	Expr2 -> Expr3                                     (46)
	Expr1 -> Expr2 '&&' Expr1                          (47)
	Expr1 -> Expr2                                     (48)
	ListExpr ->                                        (49)
	ListExpr -> Expr                                   (50)
	ListExpr -> Expr ',' ListExpr                      (51)
	ListArg -> Arg                                     (52)
	ListArg -> Arg ',' ListArg                         (53)
	ListMatchBranch ->                                 (54)
	ListMatchBranch -> MatchBranch ListMatchBranch     (55)
	MatchBranch -> '|' Expr '->' Expr                  (56)
	Literal -> Integer                                 (57)
	AddOp -> '+'                                       (58)
	AddOp -> '-'                                       (59)
	MulOp -> '*'                                       (60)
	MulOp -> '/'                                       (61)
	MulOp -> '%'                                       (62)
	RelOp -> '<'                                       (63)
	RelOp -> '<='                                      (64)
	RelOp -> '>'                                       (65)
	RelOp -> '>='                                      (66)
	RelOp -> '=='                                      (67)
	RelOp -> '!='                                      (68)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'->'           { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	'::'           { PT _ (TS _ 13) }
	';;'           { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<='           { PT _ (TS _ 16) }
	'='            { PT _ (TS _ 17) }
	'=='           { PT _ (TS _ 18) }
	'=>'           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'['            { PT _ (TS _ 22) }
	']'            { PT _ (TS _ 23) }
	'_'            { PT _ (TS _ 24) }
	'else'         { PT _ (TS _ 25) }
	'fun'          { PT _ (TS _ 26) }
	'if'           { PT _ (TS _ 27) }
	'in'           { PT _ (TS _ 28) }
	'let'          { PT _ (TS _ 29) }
	'match'        { PT _ (TS _ 30) }
	'then'         { PT _ (TS _ 31) }
	'type'         { PT _ (TS _ 32) }
	'with'         { PT _ (TS _ 33) }
	'|'            { PT _ (TS _ 34) }
	'||'           { PT _ (TS _ 35) }
	L_integ        { PT _ (TI _) }
	L_LIdent       { PT _ (T_LIdent _) }
	L_UIdent       { PT _ (T_UIdent _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Integer         rule  1
	LIdent          rule  2
	UIdent          rule  3
	Program         rule  4
	ListTopDef      rules 5, 6
	TopDef          rules 7, 8, 9, 10
	ListConstructor rules 11, 12
	ListLIdent      rules 13, 14
	Type            rules 15, 16, 17, 18
	ListType        rules 19, 20
	Constructor     rules 21, 22
	Arg             rule  23
	Expr            rules 24, 25, 26, 27, 28, 29, 30, 31
	Expr6           rules 32, 33, 34, 35, 36, 37
	Expr5           rules 38, 39, 40
	Expr4           rules 41, 42
	Expr3           rules 43, 44
	Expr2           rules 45, 46
	Expr1           rules 47, 48
	ListExpr        rules 49, 50, 51
	ListArg         rules 52, 53
	ListMatchBranch rules 54, 55
	MatchBranch     rule  56
	Literal         rule  57
	AddOp           rules 58, 59
	MulOp           rules 60, 61, 62
	RelOp           rules 63, 64, 65, 66, 67, 68

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'type'         shift, and enter state 7
	L_LIdent       shift, and enter state 8

	LIdent         goto state 3
	Program        goto state 4
	ListTopDef     goto state 5
	TopDef         goto state 6

State 1

	Integer -> . L_integ                                (rule 1)

	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'->'           reduce using rule 1
	'/'            reduce using rule 1
	'::'           reduce using rule 1
	';;'           reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	']'            reduce using rule 1
	'else'         reduce using rule 1
	'in'           reduce using rule 1
	'then'         reduce using rule 1
	'with'         reduce using rule 1
	'|'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	TopDef -> LIdent . '::' Type '=' Expr               (rule 9)
	TopDef -> LIdent . '=' Expr                         (rule 10)

	'::'           shift, and enter state 12
	'='            shift, and enter state 13


State 4

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	ListTopDef -> TopDef . ';;'                         (rule 5)
	ListTopDef -> TopDef . ';;' ListTopDef              (rule 6)

	';;'           shift, and enter state 11


State 7

	TopDef -> 'type' . UIdent '(' ListLIdent ')' '=' ListConstructor    (rule 7)
	TopDef -> 'type' . UIdent '=' ListConstructor       (rule 8)

	L_UIdent       shift, and enter state 10

	UIdent         goto state 9

State 8

	LIdent -> L_LIdent .                                (rule 2)

	'!='           reduce using rule 2
	'%'            reduce using rule 2
	'&&'           reduce using rule 2
	'('            reduce using rule 2
	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'->'           reduce using rule 2
	'/'            reduce using rule 2
	'::'           reduce using rule 2
	';;'           reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'='            reduce using rule 2
	'=='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	']'            reduce using rule 2
	'else'         reduce using rule 2
	'in'           reduce using rule 2
	'then'         reduce using rule 2
	'with'         reduce using rule 2
	'|'            reduce using rule 2
	'||'           reduce using rule 2
	L_LIdent       reduce using rule 2
	L_UIdent       reduce using rule 2


State 9

	TopDef -> 'type' UIdent . '(' ListLIdent ')' '=' ListConstructor    (rule 7)
	TopDef -> 'type' UIdent . '=' ListConstructor       (rule 8)

	'('            shift, and enter state 39
	'='            shift, and enter state 40


State 10

	UIdent -> L_UIdent .                                (rule 3)

	'!='           reduce using rule 3
	'%'            reduce using rule 3
	'&&'           reduce using rule 3
	'('            reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'->'           reduce using rule 3
	'/'            reduce using rule 3
	'::'           reduce using rule 3
	';;'           reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'='            reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	']'            reduce using rule 3
	'else'         reduce using rule 3
	'in'           reduce using rule 3
	'then'         reduce using rule 3
	'with'         reduce using rule 3
	'|'            reduce using rule 3
	'||'           reduce using rule 3


State 11

	ListTopDef -> TopDef ';;' .                         (rule 5)
	ListTopDef -> TopDef ';;' . ListTopDef              (rule 6)

	'type'         shift, and enter state 7
	L_LIdent       shift, and enter state 8
	%eof           reduce using rule 5

	LIdent         goto state 3
	ListTopDef     goto state 38
	TopDef         goto state 6

State 12

	TopDef -> LIdent '::' . Type '=' Expr               (rule 9)

	'('            shift, and enter state 37
	L_LIdent       shift, and enter state 8
	L_UIdent       shift, and enter state 10

	LIdent         goto state 34
	UIdent         goto state 35
	Type           goto state 36

State 13

	TopDef -> LIdent '=' . Expr                         (rule 10)

	'!'            shift, and enter state 25
	'('            shift, and enter state 26
	'-'            shift, and enter state 27
	'['            shift, and enter state 28
	'_'            shift, and enter state 29
	'fun'          shift, and enter state 30
	'if'           shift, and enter state 31
	'let'          shift, and enter state 32
	'match'        shift, and enter state 33
	L_integ        shift, and enter state 2
	L_LIdent       shift, and enter state 8
	L_UIdent       shift, and enter state 10

	Integer        goto state 14
	LIdent         goto state 15
	UIdent         goto state 16
	Expr           goto state 17
	Expr6          goto state 18
	Expr5          goto state 19
	Expr4          goto state 20
	Expr3          goto state 21
	Expr2          goto state 22
	Expr1          goto state 23
	Literal        goto state 24

State 14

	Literal -> Integer .                                (rule 57)

	'!='           reduce using rule 57
	'%'            reduce using rule 57
	'&&'           reduce using rule 57
	'('            reduce using rule 57
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'->'           reduce using rule 57
	'/'            reduce using rule 57
	'::'           reduce using rule 57
	';;'           reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'='            reduce using rule 57
	'=='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	']'            reduce using rule 57
	'else'         reduce using rule 57
	'in'           reduce using rule 57
	'then'         reduce using rule 57
	'with'         reduce using rule 57
	'|'            reduce using rule 57
	'||'           reduce using rule 57


State 15

	Expr6 -> LIdent .                                   (rule 32)

	'!='           reduce using rule 32
	'%'            reduce using rule 32
	'&&'           reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	'*'            reduce using rule 32
	'+'            reduce using rule 32
	','            reduce using rule 32
	'-'            reduce using rule 32
	'->'           reduce using rule 32
	'/'            reduce using rule 32
	'::'           reduce using rule 32
	';;'           reduce using rule 32
	'<'            reduce using rule 32
	'<='           reduce using rule 32
	'='            reduce using rule 32
	'=='           reduce using rule 32
	'>'            reduce using rule 32
	'>='           reduce using rule 32
	']'            reduce using rule 32
	'else'         reduce using rule 32
	'in'           reduce using rule 32
	'then'         reduce using rule 32
	'with'         reduce using rule 32
	'|'            reduce using rule 32
	'||'           reduce using rule 32


State 16

	Expr6 -> UIdent .                                   (rule 33)

	'!='           reduce using rule 33
	'%'            reduce using rule 33
	'&&'           reduce using rule 33
	'('            reduce using rule 33
	')'            reduce using rule 33
	'*'            reduce using rule 33
	'+'            reduce using rule 33
	','            reduce using rule 33
	'-'            reduce using rule 33
	'->'           reduce using rule 33
	'/'            reduce using rule 33
	'::'           reduce using rule 33
	';;'           reduce using rule 33
	'<'            reduce using rule 33
	'<='           reduce using rule 33
	'='            reduce using rule 33
	'=='           reduce using rule 33
	'>'            reduce using rule 33
	'>='           reduce using rule 33
	']'            reduce using rule 33
	'else'         reduce using rule 33
	'in'           reduce using rule 33
	'then'         reduce using rule 33
	'with'         reduce using rule 33
	'|'            reduce using rule 33
	'||'           reduce using rule 33


State 17

	TopDef -> LIdent '=' Expr .                         (rule 10)

	';;'           reduce using rule 10


State 18

	Expr6 -> Expr6 . '(' ListExpr ')'                   (rule 35)
	Expr5 -> Expr6 .                                    (rule 40)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&&'           reduce using rule 40
	'('            shift, and enter state 74
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'->'           reduce using rule 40
	'/'            reduce using rule 40
	'::'           reduce using rule 40
	';;'           reduce using rule 40
	'<'            reduce using rule 40
	'<='           reduce using rule 40
	'='            reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	']'            reduce using rule 40
	'else'         reduce using rule 40
	'in'           reduce using rule 40
	'then'         reduce using rule 40
	'with'         reduce using rule 40
	'|'            reduce using rule 40
	'||'           reduce using rule 40


State 19

	Expr4 -> Expr5 .                                    (rule 42)

	'!='           reduce using rule 42
	'%'            reduce using rule 42
	'&&'           reduce using rule 42
	')'            reduce using rule 42
	'*'            reduce using rule 42
	'+'            reduce using rule 42
	','            reduce using rule 42
	'-'            reduce using rule 42
	'->'           reduce using rule 42
	'/'            reduce using rule 42
	'::'           reduce using rule 42
	';;'           reduce using rule 42
	'<'            reduce using rule 42
	'<='           reduce using rule 42
	'='            reduce using rule 42
	'=='           reduce using rule 42
	'>'            reduce using rule 42
	'>='           reduce using rule 42
	']'            reduce using rule 42
	'else'         reduce using rule 42
	'in'           reduce using rule 42
	'then'         reduce using rule 42
	'with'         reduce using rule 42
	'|'            reduce using rule 42
	'||'           reduce using rule 42


State 20

	Expr4 -> Expr4 . MulOp Expr5                        (rule 41)
	Expr3 -> Expr4 .                                    (rule 44)

	'!='           reduce using rule 44
	'%'            shift, and enter state 71
	'&&'           reduce using rule 44
	')'            reduce using rule 44
	'*'            shift, and enter state 72
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'->'           reduce using rule 44
	'/'            shift, and enter state 73
	'::'           reduce using rule 44
	';;'           reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'='            reduce using rule 44
	'=='           reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	']'            reduce using rule 44
	'else'         reduce using rule 44
	'in'           reduce using rule 44
	'then'         reduce using rule 44
	'with'         reduce using rule 44
	'|'            reduce using rule 44
	'||'           reduce using rule 44

	MulOp          goto state 70

State 21

	Expr3 -> Expr3 . AddOp Expr4                        (rule 43)
	Expr2 -> Expr3 .                                    (rule 46)

	'!='           reduce using rule 46
	'&&'           reduce using rule 46
	')'            reduce using rule 46
	'+'            shift, and enter state 68
	','            reduce using rule 46
	'-'            shift, and enter state 69
	'->'           reduce using rule 46
	'::'           reduce using rule 46
	';;'           reduce using rule 46
	'<'            reduce using rule 46
	'<='           reduce using rule 46
	'='            reduce using rule 46
	'=='           reduce using rule 46
	'>'            reduce using rule 46
	'>='           reduce using rule 46
	']'            reduce using rule 46
	'else'         reduce using rule 46
	'in'           reduce using rule 46
	'then'         reduce using rule 46
	'with'         reduce using rule 46
	'|'            reduce using rule 46
	'||'           reduce using rule 46

	AddOp          goto state 67

State 22

	Expr2 -> Expr2 . RelOp Expr3                        (rule 45)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 47)
	Expr1 -> Expr2 .                                    (rule 48)

	'!='           shift, and enter state 60
	'&&'           shift, and enter state 61
	')'            reduce using rule 48
	','            reduce using rule 48
	'->'           reduce using rule 48
	'::'           reduce using rule 48
	';;'           reduce using rule 48
	'<'            shift, and enter state 62
	'<='           shift, and enter state 63
	'='            reduce using rule 48
	'=='           shift, and enter state 64
	'>'            shift, and enter state 65
	'>='           shift, and enter state 66
	']'            reduce using rule 48
	'else'         reduce using rule 48
	'in'           reduce using rule 48
	'then'         reduce using rule 48
	'with'         reduce using rule 48
	'|'            reduce using rule 48
	'||'           reduce using rule 48

	RelOp          goto state 59

State 23

	Expr -> Expr1 . '||' Expr                           (rule 30)
	Expr -> Expr1 .                                     (rule 31)

	')'            reduce using rule 31
	','            reduce using rule 31
	'->'           reduce using rule 31
	'::'           reduce using rule 31
	';;'           reduce using rule 31
	'='            reduce using rule 31
	']'            reduce using rule 31
	'else'         reduce using rule 31
	'in'           reduce using rule 31
	'then'         reduce using rule 31
	'with'         reduce using rule 31
	'|'            reduce using rule 31
	'||'           shift, and enter state 58


State 24

	Expr6 -> Literal .                                  (rule 36)
